fix: error message contrast

--- a/src/default.scss
+++ b/src/default.scss
@@ -19,7 +19,7 @@ $btn-border-radius: 4rem;
 $input-color: black;
 $input-border-color: transparent;
 $input-focus-box-shadow: none;
-$input-invalid-color: #bb0042;
+$input-invalid-color: #88031a;
 $divider-background-color: #f5f6f7;
 $divider-border-color: #8c8c8c;
 $poll-data-cell-border-left-right-color: #d9d9d9;
